refactor(common): use Byte.valueOf() instead of new Byte()